<resources>
    <string name="app_name">Handshake</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="recentsent">Recent Sent</string>
    <string name="recentreceived">Recent Received</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_in">Google Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_changedefaultsettings">Change Default Settings</string>
    <string name="nav_item_logout">Logout</string>
    <string name="vibration_time_selection">Duration of Vibration</string>
    <string name="vibration_weight_selection">Weight of Vibration</string>
    <string name="vibration_weight_start">100ms</string>
    <string name="vibration_weight_end">700ms</string>
    <string name="vibration_duration_start">5s</string>
    <string name="vibration_duration_end">60s</string>
    <string name="vibration_pattern_selection">Enter a Pattern</string>
    <string name="flashlight_selection">Flashlight Options</string>
    <string name="constant">Constant</string>
    <string name="flickering">Flickering</string>
    <string name="next">Next</string>
    <string name="title_handshake">Handshake</string>
    <string name="title_activity_profile">Handshake Profile</string>
    <string name="defaultsetting">Default</string>
    <string name="customsetting">Custom</string>
    <string name="savedprofile">Saved</string>
    <string name="allow_flashlight">Allow Sender to use Flashlight</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_changedefaultsettings</item>
        <item>@string/nav_item_logout</item>
    </string-array>

</resources>
