<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/base_toolbar"></include>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/vibration_time_selection"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/durationvibrationip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:indeterminate="false"
            android:max="60" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/vibration_duration_start" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/vibration_duration_end" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/vibration_weight_selection"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/weightvibrationip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:indeterminate="false"
            android:max="60" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/vibration_weight_start" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/vibration_weight_end" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/vibration_pattern_selection"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:weightSum="4">

            <Button
                android:id="@+id/pianobtn1"
                style="?android:attr/buttonStyleInset"
                android:layout_width="60dp"
                android:layout_height="100dp"
                android:text="1" />

            <Button
                android:id="@+id/pianobtn2"
                style="?android:attr/buttonStyleInset"
                android:layout_width="60dp"
                android:layout_height="100dp"
                android:text="2" />

            <Button
                android:id="@+id/pianobtn3"
                style="?android:attr/buttonStyleInset"
                android:layout_width="60dp"
                android:layout_height="100dp"
                android:text="3" />

            <Button
                android:id="@+id/pianobtn4"
                style="?android:attr/buttonStyleInset"
                android:layout_width="60dp"
                android:layout_height="100dp"
                android:text="4" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/flashlight_selection"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <RadioGroup
                android:id="@+id/radioFlashlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioConstant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/constant"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radioFlickering"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flickering" />

            </RadioGroup>


        </LinearLayout>


        <Button
            android:id="@+id/sender_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:background="@color/wallet_highlighted_text_holo_light"
            android:text="@string/next" />


    </LinearLayout>


    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:name="fabssj4.nyu.handshake.controllers.FragmentDrawer"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer" />


</android.support.v4.widget.DrawerLayout>