<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvExampleCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/contactcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:padding="4dp"
        android:background="@drawable/border_single_card"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cardtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill_horizontal"
            android:padding="10dp"
            android:gravity="left"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:id="@+id/cardexpandarea"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/defaultsetting" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/customsetting" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/savedprofile" />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>